[package]
name = "clash_log"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
toml = "0.8"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
log = "0.4"
env_logger = "0.11"
